--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
+    <img src="abc.svg" width="50%">
     <div class="first-div">
         <p>Item 1</p>
     </div>
